--- a/config/settings.example.toml
+++ b/config/settings.example.toml
@@ -34,3 +34,32 @@ CDN_HTML_BASE = "https://stories.suvichaar.org/"
 CDN_BASE = "https://cdn.suvichaar.org/"
 DEFAULT_ERROR_IMAGE = "https://media.suvichaar.org/default-error.jpg"
 
+# Image Providers
+[ai_image]
+AI_IMAGE_ENDPOINT = "https://your-ai-image-endpoint"
+AI_IMAGE_API_KEY = "replace-with-ai-image-key"
+
+[pexels]
+PEXELS_API_KEY = "replace-with-pexels-key"
+
+[image_processing]
+RESIZE_VARIANTS = "sm:300x200,md:768x432,lg:1280x720"
+
+# Voice Providers
+[elevenlabs]
+ELEVENLABS_API_KEY = "replace-with-elevenlabs-key"
+ELEVENLABS_VOICE_ID = "replace-with-voice-id"
+
+[azure_voice]
+AZURE_SPEECH_KEY = "replace-with-azure-speech-key"
+AZURE_SPEECH_REGION = "eastus"
+AZURE_SPEECH_VOICE = "en-US-AriaNeural"
+
+[voice_storage]
+VOICE_BUCKET = "suvichaarapp"
+VOICE_PREFIX = "media/audio"
+
+# Database (Postgres / Azure Flexible Server)
+[database]
+DATABASE_URL = "postgresql+psycopg://user:password@host:5432/newslab"
+
