Add ElevenLabs voice integration and Streamlit controls

--- a/config/settings.example.toml
+++ b/config/settings.example.toml
@@ -47,8 +47,8 @@ RESIZE_VARIANTS = "sm:300x200,md:768x432,lg:1280x720"
 
 # Voice Providers
 [elevenlabs]
-ELEVENLABS_API_KEY = ""
-ELEVENLABS_VOICE_ID = ""
+ELEVENLABS_API_KEY = "sk_18ec75c00f3a3141f2766e4353ec918015cbb9ffbe79b439"
+ELEVENLABS_VOICE_ID = "yD0Zg2jxgfQLY8I2MEHO"  # e.g. "yD0Zg2jxgfQLY8I2MEHO"
 
 [azure_voice]
 AZURE_SPEECH_KEY = "YOUR_SPEECH_KEY_HERE"
